; ModuleID = '/home/carl/AnghaBench/curl/tests/unit/extr_unit1302.c_unit_setup.c'
source_filename = "/home/carl/AnghaBench/curl/tests/unit/extr_unit1302.c_unit_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CURLE_OK = common dso_local global i32 0, align 4
@CURL_GLOBAL_ALL = common dso_local global i32 0, align 4
@data = common dso_local global i32 0, align 4
@CURLE_OUT_OF_MEMORY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @unit_setup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @unit_setup() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @CURLE_OK, align 4
  store i32 %3, i32* %2, align 4
  %4 = load i32, i32* @CURL_GLOBAL_ALL, align 4
  %5 = call i32 @global_init(i32 %4)
  %6 = call i32 (...) @curl_easy_init()
  store i32 %6, i32* @data, align 4
  %7 = load i32, i32* @data, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %11, label %9

9:                                                ; preds = %0
  %10 = load i32, i32* @CURLE_OUT_OF_MEMORY, align 4
  store i32 %10, i32* %1, align 4
  br label %13

11:                                               ; preds = %0
  %12 = load i32, i32* %2, align 4
  store i32 %12, i32* %1, align 4
  br label %13

13:                                               ; preds = %11, %9
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local i32 @global_init(i32) #1

declare dso_local i32 @curl_easy_init(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
